Update index.html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <h1 class="header">Beetroot <i>(Beta vulgaris)</i></h1>
+    <h1 class=header>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
         <li><a href="">Common varieties</a></li>
@@ -35,7 +35,7 @@
 
     <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets. — <cite>Chris Pratt</cite></blockquote>
 
-    <h2 class="header">Common varieties</h2>
+    <h2 class=header>Common varieties</h2>
 
     <ul>
       <li>Albino</li>
@@ -45,7 +45,7 @@
       <li>Early Wonder</li>
     </ul>
 
-    <h2 class="header">Nutritional information</h2>
+    <h2 class=header>Nutritional information</h2>
     <dl>
       <dt>Serving size:</dt>
       <dd>100 g</dd>
@@ -62,7 +62,7 @@
   </main>
 
   <aside>
-    <h2 class="header">Tags</h2>
+    <h2 class=header>Tags</h2>
     <p>Crimson</p>
     <p>Awesome</p>
     <p>Pickle-able</p>
