Fix classes on index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <h1 class="header">Beetroot <i>(Beta vulgaris)</i></h1>
+    <h1 class="beet">Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
         <li><a href="">Common varieties</a></li>
@@ -21,19 +21,23 @@
     </nav>
   </header>
 
-  <main>
     <figure>
       <img src="images/beets.jpg" alt="">
-      <figcaption>A bundle of beets from a local farm food co-op program.</figcaption>
+      <figcaption class="bundle">A bundle of beets from a local farm food co-op program.</figcaption>
     </figure>
 
-    <p><data value="55-65-days">55 to 65 days are needed from germination to harvest of the root.</data></p>
+    <main>
 
-    <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+    <p><b class="days"><data value="55-65-days">55 to 65 days are needed from germination to harvest of the root.</data></p>
 
-    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, Battlestar Galactica”</q>.</p>
+    <p class="root">The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-    <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets. — <cite>Chris Pratt</cite></blockquote>
+    <p class="root">In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, Battlestar Galactica”</q>.</p>
+
+    <blockquote>
+    <p class="weird">I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</p>
+      <footer>— <cite>Chris Pratt</cite></footer>
+    </blockquote>
 
     <article>
 
